added DockerFile and Xaus openApi doc